Add icons and menu bar

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -44,6 +44,7 @@ target_link_libraries(viewer
 	OpenGL::GL
 	glad::glad
 	imguizmo_modefied
+	iconFontCppHeaders
 	#imguizmo::imguizmo
 	B3D::Tools::ColorMap
 	${CUDA_nvml_LIBRARY}
