Move sofia stuff to separat file. Use Projectexplorer

--- a/tools/sofia_rest_server/CMakeLists.txt
+++ b/tools/sofia_rest_server/CMakeLists.txt
@@ -1,8 +1,10 @@
 find_package(httplib CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem)
- find_package(args CONFIG REQUIRED)
-add_executable(sofia_server main.cpp)
+find_package(args CONFIG REQUIRED)
+find_package(stduuid CONFIG REQUIRED)
+
+add_executable(sofia_server main.cpp "src/SoFiA.h" "src/SoFiA.cpp")
 
 target_link_libraries(sofia_server
 	PRIVATE
@@ -11,9 +13,19 @@ target_link_libraries(sofia_server
 		Boost::boost
 		Boost::filesystem
 		taywee::args
+		B3D::Tools::ProjectExplorer
+		stduuid
+		NanoCutApi
 )
 
-target_compile_features(sofia_server PUBLIC cxx_std_20)
+target_include_directories(sofia_server
+	PRIVATE
+		src
+
+)
+
+
+target_compile_features(sofia_server PUBLIC cxx_std_20 PRIVATE cxx_std_20)
 
 if(MSVC)
 	set(MSVC_CXX_COMPILER_FLAGS "/Zc:__cplusplus")
