--- a/tools/sofia_rest_server/CMakeLists.txt
+++ b/tools/sofia_rest_server/CMakeLists.txt
@@ -29,6 +29,6 @@ target_compile_features(sofia_server PUBLIC cxx_std_20 PRIVATE cxx_std_20)
 
 if(MSVC)
 	set(MSVC_CXX_COMPILER_FLAGS "/Zc:__cplusplus")
-	target_compile_options(NanoCutterParser PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
+	target_compile_options(sofia_server PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
 endif()
 
