Simple ServerClient as wrapper used by the viewer/renderer

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(fitsCutterNanoVdbConverter)
 add_subdirectory(nanoCutterParser)
 add_subdirectory(colorMap)
 add_subdirectory(sofia_rest_server)
+add_subdirectory(sofia_server_client)
 add_subdirectory(projectExplorer)
