--- a/tools/projectExplorer/CMakeLists.txt
+++ b/tools/projectExplorer/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(${MODULE_NAME}
 target_include_directories(${MODULE_NAME}
 	PUBLIC
 		"include"
+		"../common/fits"
 	PRIVATE
 		"src"
 )
