--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -8,10 +8,10 @@ find_package(glm CONFIG REQUIRED)
 add_executable(viewer)
 
 IF (WIN32)
-	target_sources(viewer PRIVATE App.rc)
+	target_sources(${viewerTargetName} PRIVATE App.rc)
 ENDIF()
 
-target_sources(viewer PRIVATE
+target_sources(${viewerTargetName} PRIVATE
 	main.cpp
 	NanoViewer.cpp
 	App.h
@@ -43,6 +43,7 @@ target_sources(viewer PRIVATE
 	FontCollection.h
 	FontCollection.cpp
 	Flags.h
+	ServerConnectionDescription.h
 	framework/Dockspace.h
 	framework/Dockspace.cpp
 	framework/DockableWindowViewBase.h
@@ -79,10 +80,9 @@ target_sources(viewer PRIVATE
 	features/serverConnect/ServerAddEditView.cpp
 )
 
-target_include_directories(viewer PUBLIC /)
-
-target_compile_features(viewer PUBLIC cxx_std_23)
-target_link_libraries(viewer
+target_include_directories(${viewerTargetName} PUBLIC /)
+target_compile_features(${viewerTargetName} PUBLIC cxx_std_23)
+target_link_libraries(${viewerTargetName}
   PRIVATE
 	glfw
 	glm::glm
@@ -110,9 +110,9 @@ option(ENABLE_NANO_SANITIZERS "Enables address sanitizers" OFF)
 
 if(ENABLE_NANO_PROFILE)
 	find_package(Tracy CONFIG REQUIRED)
-	target_link_libraries(viewer PRIVATE Tracy::TracyClient)
-	target_compile_definitions(viewer PUBLIC -DNANO_PROFILE -DTRACY_ENABLE)
-	target_sources(viewer PRIVATE
+	target_link_libraries(${viewerTargetName} PRIVATE Tracy::TracyClient)
+	target_compile_definitions(${viewerTargetName} PUBLIC -DNANO_PROFILE -DTRACY_ENABLE)
+	target_sources(${viewerTargetName} PRIVATE
 	main.cpp
 	)
 endif()
@@ -127,7 +127,7 @@ if(ENABLE_NANO_SANITIZERS)
 	#target_compile_definitions(viewer PRIVATE -D_CRTDBG_MAP_ALLOC)
 endif()
 
-target_include_directories(viewer
+target_include_directories(${viewerTargetName}
 	PRIVATE
 		${Stb_INCLUDE_DIR}
 )
