--- a/tools/project/fileCatalog/CMakeLists.txt
+++ b/tools/project/fileCatalog/CMakeLists.txt
@@ -1,32 +1,29 @@
-set(MODULE_NAME ProjectExplorer)
+set(MODULE_SIMPLE_NAME FileCatalog)
+set(MODULE_NAME "B3dTools${MODULE_SIMPLE_NAME}")
 
-find_package(httplib CONFIG REQUIRED)
-find_package(nlohmann_json CONFIG REQUIRED)
 find_package(stduuid CONFIG REQUIRED)
 
-add_library(${MODULE_NAME}
-	"include/Project.h"
-	
-	"include/Catalog.h"
-	"src/Catalog.cpp"
-	"include/Request.h"
-	"include/Result.h"
-	"src/Request.cpp"
-	"src/Common.cpp" "src/Common.h")
+
+add_library(${MODULE_NAME})
+
+target_sources(${MODULE_NAME}
+	PUBLIC
+		include/FileCatalog.h
+	PRIVATE
+		src/FileCatalog.cpp
+ )
 
 target_include_directories(${MODULE_NAME}
 	PUBLIC
 		"include"
-		"../common/fits"
 	PRIVATE
 		"src"
 )
 
 target_link_libraries(${MODULE_NAME}
+	PUBLIC
 	PRIVATE
 		stduuid
-    PUBLIC
-		nlohmann_json::nlohmann_json
 )
 
 if(MSVC)
@@ -34,8 +31,10 @@ if(MSVC)
 	target_compile_options(${MODULE_NAME} PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
 endif()
 
-
 target_compile_features(${MODULE_NAME} PUBLIC cxx_std_20 PRIVATE cxx_std_20)
 
-add_library(B3D::Tools::${MODULE_NAME} ALIAS ${MODULE_NAME})
+add_library(B3D::Tools::${MODULE_SIMPLE_NAME} ALIAS ${MODULE_NAME})
+
 set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Tools")
+# Currently ignored by VS
+set_property(TARGET ${MODULE_NAME} PROPERTY PROJECT_LABEL B3D::Tools::${MODULE_SIMPLE_NAME})
