Small changes for working build
- Enable NanoCutter
- set CMake variable viewerTargetName

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,4 @@
 #add_subdirectory(fitsCutterNanoVdbConverter)
-#add_subdirectory(nanoCutterParser)
 
 add_subdirectory(colorMap)
 add_subdirectory(header)
@@ -9,3 +8,5 @@ add_subdirectory(sofia)
 add_subdirectory(sofiaNanoPipeline)
 add_subdirectory(project)
 add_subdirectory(projectServer)
+
+add_subdirectory(nanoCutterParser)
