Manually merge new profile into current branch
additionally implement GL GPU Timers to capture OpenGL workload

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = thirdParty/owl
 	url = https://github.com/AntonK47/owl.git
 	branch = dev
+[submodule "thirdParty/ImGuiUtils"]
+	path = thirdParty/ImGuiUtils
+	url = https://github.com/Raikiri/LegitProfiler.git
