Logging for ProjectServer
  - Add logging with plog
  - Write Output of SiFiA-Process to file to not clutter Console

--- a/tools/projectServer/CMakeLists.txt
+++ b/tools/projectServer/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(nlohmann_json CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem)
 find_package(args CONFIG REQUIRED)
 find_package(stduuid CONFIG REQUIRED)
+find_package(plog CONFIG REQUIRED)
 
 add_executable(ProjectServer "main.cpp" "src/ProjectProvider.cpp" "src/ProjectProvider.h" "src/Internals.h")
 
@@ -15,18 +16,19 @@ target_link_libraries(ProjectServer
 		B3D::Tools::Fits
 		B3D::Tools::SofiaNanoPipeline
 		nlohmann_json::nlohmann_json
-		
-
 		httplib::httplib
 		Boost::boost
 		Boost::filesystem
 		taywee::args
 		stduuid
+		plog::plog
 )
 
 target_include_directories(ProjectServer
 	PRIVATE
 		src
+
+
 )
 target_compile_definitions(ProjectServer PUBLIC B3D_USE_NLOHMANN_JSON)
 target_compile_features(ProjectServer PUBLIC cxx_std_20 PRIVATE cxx_std_20)
