WIP: UI views rework

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -51,6 +51,8 @@ target_sources(${viewerTargetName} PRIVATE
 	Animation.h
 	GLGpuTimers.h
 	ProfilersWindow.h
+	ImGuiExtension.h
+	ImGuiExtension.cpp
 	framework/Dockspace.h
 	framework/Dockspace.cpp
 	framework/DockableWindowViewBase.h
