WIP on sofia_rest_server

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -109,6 +109,7 @@ target_link_libraries(${viewerTargetName}
 	B3D::Renderer::CudaSurfaceObjectWriteTest
 	B3D::Renderer::SimpleTriangles
 	B3D::Renderer::Nano
+	B3D::Renderer::FitsNvdb
 	B3D::Renderer::FastVoxelTraversal
 	B3D::Renderer::NanoOutOfCore
 	B3D::Tools::ServerClient
