--- a/unityCUDAInterop/actions/CMakeLists.txt
+++ b/unityCUDAInterop/actions/CMakeLists.txt
@@ -1,5 +1,6 @@
 # add_subdirectory(actionSyncPrimitiveSample)
-add_subdirectory(actionSimpleTriangles)
-add_subdirectory(actionNanoRenderer)
-add_subdirectory(actionNativeTexture)
+#add_subdirectory(actionSimpleTriangles)
+#add_subdirectory(actionNanoRenderer)
+#add_subdirectory(actionNativeTexture)
 #add_subdirectory(actionSyncPrimitiveSample)
+add_subdirectory(actionFitsNvdbRenderer)
