--- a/tools/project/project/CMakeLists.txt
+++ b/tools/project/project/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(${MODULE_NAME}
 		include/Request.h
 	PRIVATE
 		src/Request.cpp
-)
+ )
 
 target_include_directories(${MODULE_NAME}
 	PUBLIC
@@ -43,3 +43,52 @@ set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Tools")
 set_property(TARGET ${MODULE_NAME} PROPERTY PROJECT_LABEL B3D::Tools::${MODULE_SIMPLE_NAME})
 
 ####################################################################################################
+
+set(MODULE_SIMPLE_CLI_NAME ProjectCLI)
+set(MODULE_CLI_NAME "B3dTools${MODULE_SIMPLE_CLI_NAME}")
+
+find_package(args CONFIG REQUIRED)
+find_package(plog CONFIG REQUIRED)
+
+add_executable(${MODULE_CLI_NAME} src/ProjectCLI.cpp)
+
+target_sources(${MODULE_CLI_NAME}
+	PUBLIC
+		src/ProjectCLI.cpp
+)
+
+target_include_directories(${MODULE_CLI_NAME}
+	PUBLIC
+		include
+		src
+)
+
+target_compile_definitions(${MODULE_CLI_NAME} PRIVATE B3D_USE_NLOHMANN_JSON)
+
+target_link_libraries(${MODULE_CLI_NAME}
+	PUBLIC
+		B3D::Tools::Sofia
+		B3D::Tools::Fits
+		B3D::Tools::Nano
+		B3D::Tools::SofiaNanoPipeline
+		B3D::Tools::Project
+		B3D::Header::Shared::Helper
+		B3D::Tools::FileCatalog
+		B3D::Header::Shared::Pipeline
+		stduuid
+		taywee::args
+		plog::plog
+)
+
+if(MSVC)
+	set(MSVC_CXX_COMPILER_FLAGS "/Zc:__cplusplus")
+	target_compile_options(${MODULE_CLI_NAME} PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${MSVC_CXX_COMPILER_FLAGS}>)
+endif()
+
+
+target_compile_features(${MODULE_CLI_NAME} PUBLIC cxx_std_20 PRIVATE cxx_std_20)
+
+add_executable(B3D::Tools::${MODULE_SIMPLE_CLI_NAME} ALIAS ${MODULE_CLI_NAME})
+set_property(TARGET ${MODULE_CLI_NAME} PROPERTY FOLDER "Tools")
+# Currently ignored by VS
+set_property(TARGET ${MODULE_CLI_NAME} PROPERTY PROJECT_LABEL B3D::Tools::${MODULE_SIMPLE_CLI_NAME})
