Add orbit camera. Add camera control switch.

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -34,6 +34,8 @@ target_sources(${viewerTargetName} PRIVATE
 	GizmoHelper.cpp
 	Camera.h
 	CameraManipulator.h
+	CameraControllers.h
+	CameraControllers.cpp
 	InteropUtils.h
 	views/VolumeView.h
 	views/VolumeView.cpp
