Add VR Multiplayer path to cmake

--- a/unityCUDAInterop/CMakeLists.txt
+++ b/unityCUDAInterop/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(UNITY_PROJECT_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/UnityPlayground")
+set(UNITY_PROJECT_ROOT_ALT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/UnityPlaygroundMultiplayer")
 set(UNITY_ASSETS_SUBDIRECTORY_RUNTIME "UnityCudaInterop/Runtime")
 set(UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTION_SAMPLES "UnityCudaInterop/Samples")
 set(UNITY_ASSET_SUBDIRECTORY_INTEROP_ACTIONS "UnityCudaInterop/Actions")
