Add project version, add more options, minor bug fixing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,20 @@
 cmake_minimum_required(VERSION 3.26)
 
+set(b3d_version_major 0)
+set(b3d_version_minor 1)
+set(b3d_version_patch 0)
+
 project(b3d_visualisation
-    VERSION 0.1
+    VERSION ${b3d_version_major}.${b3d_version_minor}.${b3d_version_patch}
     LANGUAGES CXX C CUDA
 )
+
+option( BUILD_SERVER "Build server component" ON )
+option( BUILD_UNITY_EXTENSION "Build renderer as an Unity extention" OFF )
+option( BUILD_DESKTOP_CLIENT_VIEWER "Build desktop viewer" ON )
+
+option( ENABLE_NANO_VIEWER_PROFILE "Enables Tracy profiling for a desktop viewer" OFF )
+option( ENABLE_NANO_VIEWER_SANITIZERS "Enables address sanitizers" OFF)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
@@ -44,11 +55,13 @@ function(add_b3d_renderer)
 	add_library(B3D::Renderer::${MODULE_NAME} ALIAS ${MODULE_NAME})
 endfunction()
 
-add_subdirectory(${PROJECT_SOURCE_DIR}/thirdParty)
+add_subdirectory(thirdParty)
 add_subdirectory(renderer)
-add_subdirectory(viewer)
 add_subdirectory(tools)
 
-#if(INCLUDE_UNITY_CUDA_INTEROP)
+if(BUILD_DESKTOP_CLIENT_VIEWER)
+	add_subdirectory(viewer)
+endif()
+if(BUILD_UNITY_EXTENSION)
 	add_subdirectory(unityCUDAInterop)
-#endif()
+endif()
