Remove unused legacy nanoCutterParser and fitsCutterNanoVdbConverter targets

--- a/renderer/nano/CMakeLists.txt
+++ b/renderer/nano/CMakeLists.txt
@@ -74,7 +74,7 @@ add_b3d_renderer(
 		nano-optixir
 		OpenVDB::nanovdb
 		imgui::imgui
-		B3D::Tools::NanoCutterParser
+		#B3D::Tools::NanoCutterParser
 		B3D::Tools::ColorMap
 		Tracy::TracyClient
 		B3D::Header::Shared::NvdbRendering
